--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             autofocus
             required
           />
+          <!-- Input field for search with attributes like id, class, placeholder, and more.-->
+         
           <button
             id="submit"
             type="button"
